Istio/DestinationRules.yaml
# ****************** Scenario --> Basic rule required for multiple versions of calcmvc to work ******************

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: calcmvc
spec:
  host: calcmvc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

# **********************************************************************

# ****************** Scenario --> Basic rule required for multiple versions of calculatorsvc to work ******************

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: calculatorsvc
spec:
  host: calculatorsvc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

# **********************************************************************


# ****************** Scenario --> Circuit breaker for calculatorsvc ******************

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: calculatorsvc
# spec:
#   host: calculatorsvc
#   trafficPolicy:
#     connectionPool:
#       tcp:
#         maxConnections: 1
#       http:
#         http1MaxPendingRequests: 1
#         maxRequestsPerConnection: 1
#     outlierDetection:
#       consecutiveErrors: 1
#       interval: 1s
#       baseEjectionTime: 3m
#       maxEjectionPercent: 100
# ---

# **********************************************************************
