Istio/egress-with-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: scientificcalculator
spec:
  hosts:
  - scientificcalculator.azurewebsites.net
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: scientificcalculator
spec:
  hosts:
  - scientificcalculator.azurewebsites.net
  tls:
  - match:
    - port: 443
      sni_hosts:
      - scientificcalculator.azurewebsites.net
    route:
    - destination:
        host: scientificcalculator.azurewebsites.net
        port:
          number: 443
      weight: 100
